tests/ui/wf/wf-trait-superbound.stderr
error[E0277]: the trait bound `T: Copy` is not satisfied
  --> $DIR/wf-trait-superbound.rs:9:21
   |
LL | trait SomeTrait<T>: ExtraCopy<T> {
   |                     ^^^^^^^^^^^^ the trait `Copy` is not implemented for `T`
   |
note: required by a bound in `ExtraCopy`
  --> $DIR/wf-trait-superbound.rs:7:19
   |
LL | trait ExtraCopy<T:Copy> { }
   |                   ^^^^ required by this bound in `ExtraCopy`
help: consider restricting type parameter `T` with trait `Copy`
   |
LL | trait SomeTrait<T: std::marker::Copy>: ExtraCopy<T> {
   |                  +++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
